# tollgate-infrastructure-kit

./: .env.example  .gitignore  AGENTS.md  Makefile  PLAN-act-runner-tollgate-module-ci.md  PLAN-backup-relatr-services.md  PLAN-dual-machine.md  PLAN-dual-vps-failover.md  PLAN-follow-triage.md  PLAN-merge-to-main.md  PLAN-strfry-agg-relay.md  PLAN-syncthing-backup.md  PLAN-vps-migration-complete.md  PLAN-vps-migration.md  PLAN.md  PROGRESS.md  README.md  llms.txt  package-lock.json  package.json
act-runner/: pyproject.toml
act-runner/src/act_runner/: api.py  config.py  daemon.py  db.py  executor.py  nostr_publisher.py  watcher.py
act-runner/src/act_runner/tests/: test_api.py  test_config.py  test_db.py  test_executor.py  test_nostr_publisher.py  test_watcher.py
ansible/: ansible.cfg
ansible/group_vars/: all.yml
ansible/inventory/: hosts.yml
ansible/playbooks/: 00-zram.yml  01-system.yml  02-docker.yml  03-cloudflare-dns.yml  04-caddy.yml  05-strfry.yml  06-obelisk-relay.yml  07-blossom.yml  08-nsite-gateway.yml  09-release-explorer.yml  10-hive-ci-site.yml  (+44 more)
docs/: act-runner-custom-pipeline.md  act-runner-deploy.md  act-runner-plan.md  adding-services.md  auditable-voting-family-test-plan.md  auditable-voting-onboarding-guide.md  auditable-voting-v0.1.62-deploy.md  budabit-community-plan.md  cloud-lab-runner.md  cloudflare-setup.md  configuration.md  fips-hosting-plan.md  getting-started.md  grasp-mirror-progress.md  mint-orchestrator-plan.md  nostr-kanban-board.md  nsite-upstream-pr-plan.md  nutshell-test-mint-requirement.md  ppq-switch-grasp-audit-plan.md  relatr-wot-plan.md  services.md  troubleshooting.md  voting-5-person-test.md  wot-sync.md
mint-approve/: pyproject.toml
mint-approve/src/tollgate_mint_approve/: cli.py
mint-approve/tests/: test_cli.py
mint-dashboard/: app.js  index.html  style.css
mint-orchestrator/: Dockerfile  pyproject.toml
mint-orchestrator/src/tollgate_mint_orchestrator/: api.py  audit_log.py  cdk_mint_rpc_pb2_grpc.py  daemon.py  event_validator.py  grpc_client.py  management_pb2.py  management_pb2_grpc.py  mint_registry.py  nostr_subscriber.py
mint-orchestrator/tests/: test_api.py  test_audit_log.py  test_daemon.py  test_daemon_full.py  test_event_validator.py  test_event_validator_full.py  test_grpc_client.py  test_grpc_client_full.py  test_mint_registry.py  test_nostr_subscriber.py
scripts/: deploy-mint.sh  deploy.sh  failover.py  follow-apply.py  follow-enrich.py  follow-review.sh  follow-triage.py  grasp-audit.py  grasp-cleanup.py  grasp-trust-filter.py  grasp-trust-filter.sh  list-mints.sh  remove-mint.sh  rubric.example.txt  strfry-wot-policy.sh  teardown.sh  test-plebeian.sh  test.sh  trust-api-server.py  watchdog.json  watchdog.py
strfry-agg/: pyproject.toml
strfry-agg/src/strfry_agg/: __init__.py  cli.py  crypto.py  nostr_fetch.py  reconcile.py  relaylist.py  write_policy.py
strfry-agg/tests/: test_crypto.py  test_reconcile.py  test_relaylist.py
(+231 files in other folders)
