[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tollgate-act-runner"
version = "0.1.0"
description = "CI/CD runner that watches GRASP repos and executes GitHub Actions workflows via act"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "pynostr>=0.7.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "aioresponses>=0.7",
]

[project.scripts]
tollgate-act-runner = "act_runner.daemon:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
